- refactored test_udf

--- a/models/deploy/core/_utils.yml
+++ b/models/deploy/core/_utils.yml
@@ -5,4 +5,5 @@ models:
         tests:
           - test_udf:
               args: "'hello'"
-              expected: "'hello'"
+              validations:
+                - result = 'hello'
