--- a/models/deploy/marketplace/alchemy/alchemy_nfts__alchemy_utils.yml
+++ b/models/deploy/marketplace/alchemy/alchemy_nfts__alchemy_utils.yml
@@ -8,128 +8,128 @@ models:
               name: test_alchemy_nfts__get_nfts_status_200
               args: >
                 'eth-mainnet', {'owner': '0x4a9318F375937B56045E5a548e7E66AEA61Dd610'}
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: get_owners_for_token
         tests:
           - test_marketplace_udf:
               name: test_alchemy_nfts__get_owners_for_token_status_200
               args: >
                 'eth-mainnet', {'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330', 'tokenId': 44}
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: get_owners_for_collection
         tests:
           - test_marketplace_udf:
               name: test_alchemy_nfts__get_owners_for_collection_status_200
               args: >
                 'eth-mainnet', {'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330', 'withTokenBalances': True}
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: is_holder_of_collection
         tests:
           - test_marketplace_udf:
               name: test_alchemy_nfts__is_holder_of_collection_status_200
               args: >
                 'eth-mainnet', {'wallet': '0xd8dA6BF26964aF9D7eEd9e03E53415D37aA96045', 'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330'}
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: get_contracts_for_owner
         tests:
           - test_marketplace_udf:
               name: test_alchemy_nfts__get_contracts_for_owner_status_200
               args: >
                 'eth-mainnet', {'owner': 'vitalik.eth', 'pageSize': 100, 'page': 1}
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: get_nft_metadata
         tests:
           - test_marketplace_udf:
               name: test_alchemy_nfts__get_nft_metadata_status_200
               args: >
                 'eth-mainnet', {'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330', 'tokenId': 44}
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: get_nft_metadata_batch
         tests:
           - test_marketplace_udf:
               name: test_alchemy_nfts__get_nft_metadata_batch_status_200
               args: >
                 'eth-mainnet', {'tokens': [{'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330', 'tokenId': 44}, {'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330', 'tokenId': 43}]}
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: get_contract_metadata
         tests:
           - test_marketplace_udf:
               name: test_alchemy_nfts__get_contract_metadata_status_200
               args: >
                 'ethereum-mainnet', {'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330'}
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: get_contract_metadata_batch
         tests:
           - test_marketplace_udf:
               name: test_alchemy_nfts__get_contract_metadata_batch_status_200
               args: >
                 'eth-mainnet', {'contractAddresses': ['0xe785E82358879F061BC3dcAC6f0444462D4b5330', '0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d']}
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: invalidate_contract
         tests:
           - test_marketplace_udf:
               name: test_alchemy_nfts__invalidate_contract_status_200
               args: >
                 'eth-mainnet', {'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330'}
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: reingest_contract
         tests:
           - test_marketplace_udf:
               name: test_alchemy_nfts__reingest_contract_status_200
               args: >
                 'eth-mainnet', {'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330'}
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: search_contract_metadata
         tests:
           - test_marketplace_udf:
               name: test_alchemy_nfts__search_contract_metadata_status_200
               args: >
                 'eth-mainnet', {'query': 'bored'}
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: get_nfts_for_collection
         tests:
           - test_marketplace_udf:
               name: test_alchemy_nfts__get_nfts_for_collection_status_200
               args: >
                 'eth-mainnet', {'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330', 'withMetadata': True}
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: get_spam_contracts
         tests:
           - test_marketplace_udf:
               name: test_alchemy_nfts__get_spam_contracts_status_200
               args: >
                 'eth-mainnet', {}
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: is_spam_contract
         tests:
           - test_marketplace_udf:
               name: test_alchemy_nfts__is_spam_contract_status_200
               args: >
                 'eth-mainnet', {'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330'}
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: is_airdrop
         tests:
           - test_marketplace_udf:
               name: test_alchemy_nfts__is_airdrop_status_200
               args: >
                 'eth-mainnet', {'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330', 'tokenId': 44}
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: report_spam
         tests:
           - test_marketplace_udf:
@@ -138,37 +138,37 @@ models:
                 enabled: false
               name: test_alchemy_nfts__report_spam_status_200
               args: null
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: get_floor_price
         tests:
           - test_marketplace_udf:
               name: test_alchemy_nfts__get_floor_price_status_200
               args: >
                 'eth-mainnet', {'contractAddress': '0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d'}
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: get_nft_sales
         tests:
           - test_marketplace_udf:
               name: test_alchemy_nfts__get_nft_sales_status_200
               args: >
                 'eth-mainnet', {'fromBlock': 0, 'toBlock': 'latest', 'order': 'asc', 'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330', 'tokenId': 44}
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: compute_rarity
         tests:
           - test_marketplace_udf:
               name: test_alchemy_nfts__compute_rarity_status_200
               args: >
                 'eth-mainnet', {'tokenId': 3603, 'contractAddress': '0xb6a37b5d14d502c3ab0ae6f3a0e058bc9517786e'}
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: summarize_nft_attributes
         tests:
           - test_marketplace_udf:
               name: test_alchemy_nfts__summarize_nft_attributes_status_200
               args: >
                 'eth-mainnet', {'contractAddress': '0xb6a37b5d14d502c3ab0ae6f3a0e058bc9517786e'}
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
