--- a/models/deploy/marketplace/chainbase/chainbase_utils__.yml
+++ b/models/deploy/marketplace/chainbase/chainbase_utils__.yml
@@ -14,5 +14,5 @@ models:
                   'token_id': 1
                 }
 
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
