--- a/models/deploy/marketplace/alchemy/alchemy_transfers__alchemy_utils.yml
+++ b/models/deploy/marketplace/alchemy/alchemy_transfers__alchemy_utils.yml
@@ -8,5 +8,5 @@ models:
               name: test_alchemy_transfers__get_asset_transfers_status_200
               args: >
                 'eth-mainnet', [{'fromBlock': '0x0', 'toBlock': 'latest', 'toAddress': '0x5c43B1eD97e52d009611D89b74fA829FE4ac56b1', 'category': ['external'], 'withMetadata': True, 'excludeZeroValue': True}]
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
