--- a/models/deploy/marketplace/credmark/credmark_utils__.yml
+++ b/models/deploy/marketplace/credmark/credmark_utils__.yml
@@ -12,8 +12,8 @@ models:
                 'blockNumber': 17767007
                 }
 
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: post
         tests:
           - test_marketplace_udf:
@@ -27,5 +27,5 @@ models:
                   'input': {'address': '0xf89a3799b90593317E0a1Eb74164fbc1755A297A'}
                 }
 
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
