--- a/models/deploy/marketplace/footprint/footprint_utils__footprint_utils.yml
+++ b/models/deploy/marketplace/footprint/footprint_utils__footprint_utils.yml
@@ -14,5 +14,5 @@ models:
                   'limit': 10,
                   'offset': 0
                 }
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
