--- a/models/deploy/marketplace/quicknode/quicknode_polygon_tokens__quicknode_utils.yml
+++ b/models/deploy/marketplace/quicknode/quicknode_polygon_tokens__quicknode_utils.yml
@@ -11,8 +11,8 @@ models:
                   'contract': '0x4d224452801ACEd8B2F0aebE155379bb5D594381'
                 }
 
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: get_token_metadata_by_symbol
         tests:
           - test_marketplace_udf:
@@ -22,8 +22,8 @@ models:
                   'symbol': 'USDC'
                 }
 
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: get_transactions_by_address
         tests:
           - test_marketplace_udf:
@@ -35,8 +35,8 @@ models:
                   'perPage': 10
                 }
 
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: get_wallet_token_balance
         tests:
           - test_marketplace_udf:
@@ -46,8 +46,8 @@ models:
                   'wallet': '0xd8da6bf26964af9d7eed9e03e53415d37aa96045'
                 }
 
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
       - name: get_wallet_token_transactions
         tests:
           - test_marketplace_udf:
@@ -60,5 +60,5 @@ models:
                   'perPage': 10
                 }
 
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
