--- a/models/deploy/marketplace/strangelove/strangelove__.yml
+++ b/models/deploy/marketplace/strangelove/strangelove__.yml
@@ -12,5 +12,5 @@ models:
                   'blockHash': '0xD70952032620CC4E2737EB8AC379806359D8E0B17B0488F627997A0B043ABDED'
                 }
 
-              filter: :status_code
-              expected: 200
+              validations:
+                - result:status_code = 200
