--- a/models/deploy/marketplace/alchemy/alchemy_nfts__alchemy_utils.yml
+++ b/models/deploy/marketplace/alchemy/alchemy_nfts__alchemy_utils.yml
@@ -4,7 +4,7 @@ models:
     columns:
       - name: get_nfts
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_alchemy_nfts__get_nfts_status_200
               args: >
                 'eth-mainnet', {'owner': '0x4a9318F375937B56045E5a548e7E66AEA61Dd610'}
@@ -13,7 +13,7 @@ models:
 
       - name: get_owners_for_token
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_alchemy_nfts__get_owners_for_token_status_200
               args: >
                 'eth-mainnet', {'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330', 'tokenId': 44}
@@ -22,7 +22,7 @@ models:
 
       - name: get_owners_for_collection
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_alchemy_nfts__get_owners_for_collection_status_200
               args: >
                 'eth-mainnet', {'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330', 'withTokenBalances': True}
@@ -31,7 +31,7 @@ models:
 
       - name: is_holder_of_collection
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_alchemy_nfts__is_holder_of_collection_status_200
               args: >
                 'eth-mainnet', {'wallet': '0xd8dA6BF26964aF9D7eEd9e03E53415D37aA96045', 'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330'}
@@ -40,7 +40,7 @@ models:
 
       - name: get_contracts_for_owner
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_alchemy_nfts__get_contracts_for_owner_status_200
               args: >
                 'eth-mainnet', {'owner': 'vitalik.eth', 'pageSize': 100, 'page': 1}
@@ -49,7 +49,7 @@ models:
 
       - name: get_nft_metadata
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_alchemy_nfts__get_nft_metadata_status_200
               args: >
                 'eth-mainnet', {'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330', 'tokenId': 44}
@@ -58,7 +58,7 @@ models:
 
       - name: get_nft_metadata_batch
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_alchemy_nfts__get_nft_metadata_batch_status_200
               args: >
                 'eth-mainnet', {'tokens': [{'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330', 'tokenId': 44}, {'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330', 'tokenId': 43}]}
@@ -67,7 +67,7 @@ models:
 
       - name: get_contract_metadata
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_alchemy_nfts__get_contract_metadata_status_200
               args: >
                 'ethereum-mainnet', {'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330'}
@@ -76,7 +76,7 @@ models:
 
       - name: get_contract_metadata_batch
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_alchemy_nfts__get_contract_metadata_batch_status_200
               args: >
                 'eth-mainnet', {'contractAddresses': ['0xe785E82358879F061BC3dcAC6f0444462D4b5330', '0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d']}
@@ -85,7 +85,7 @@ models:
 
       - name: invalidate_contract
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_alchemy_nfts__invalidate_contract_status_200
               args: >
                 'eth-mainnet', {'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330'}
@@ -94,7 +94,7 @@ models:
 
       - name: reingest_contract
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_alchemy_nfts__reingest_contract_status_200
               args: >
                 'eth-mainnet', {'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330'}
@@ -103,7 +103,7 @@ models:
 
       - name: search_contract_metadata
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_alchemy_nfts__search_contract_metadata_status_200
               args: >
                 'eth-mainnet', {'query': 'bored'}
@@ -112,7 +112,7 @@ models:
 
       - name: get_nfts_for_collection
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_alchemy_nfts__get_nfts_for_collection_status_200
               args: >
                 'eth-mainnet', {'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330', 'withMetadata': True}
@@ -121,7 +121,7 @@ models:
 
       - name: get_spam_contracts
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_alchemy_nfts__get_spam_contracts_status_200
               args: >
                 'eth-mainnet', {}
@@ -130,7 +130,7 @@ models:
 
       - name: is_spam_contract
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_alchemy_nfts__is_spam_contract_status_200
               args: >
                 'eth-mainnet', {'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330'}
@@ -139,7 +139,7 @@ models:
 
       - name: is_airdrop
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_alchemy_nfts__is_airdrop_status_200
               args: >
                 'eth-mainnet', {'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330', 'tokenId': 44}
@@ -148,7 +148,7 @@ models:
 
       - name: report_spam
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               config:
                 # we don't want to run this test in CI
                 enabled: false
@@ -159,7 +159,7 @@ models:
 
       - name: get_floor_price
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_alchemy_nfts__get_floor_price_status_200
               args: >
                 'eth-mainnet', {'contractAddress': '0xbc4ca0eda7647a8ab7c2061c2e118a18a936f13d'}
@@ -168,7 +168,7 @@ models:
 
       - name: get_nft_sales
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_alchemy_nfts__get_nft_sales_status_200
               args: >
                 'eth-mainnet', {'fromBlock': 0, 'toBlock': 'latest', 'order': 'asc', 'contractAddress': '0xe785E82358879F061BC3dcAC6f0444462D4b5330', 'tokenId': 44}
@@ -177,7 +177,7 @@ models:
 
       - name: compute_rarity
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_alchemy_nfts__compute_rarity_status_200
               args: >
                 'eth-mainnet', {'tokenId': 3603, 'contractAddress': '0xb6a37b5d14d502c3ab0ae6f3a0e058bc9517786e'}
@@ -186,7 +186,7 @@ models:
 
       - name: summarize_nft_attributes
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_alchemy_nfts__summarize_nft_attributes_status_200
               args: >
                 'eth-mainnet', {'contractAddress': '0xb6a37b5d14d502c3ab0ae6f3a0e058bc9517786e'}
