--- a/models/deploy/marketplace/chainbase/chainbase_utils__.yml
+++ b/models/deploy/marketplace/chainbase/chainbase_utils__.yml
@@ -4,7 +4,7 @@ models:
     columns:
       - name: get
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_chainbase_utils__get_status_200
               args: >
                 '/v1/nft/metadata'
