--- a/models/deploy/marketplace/dapplooker/dapplooker__.yml
+++ b/models/deploy/marketplace/dapplooker/dapplooker__.yml
@@ -4,7 +4,7 @@ models:
     columns:
       - name: get_chart
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_dapplooker__get_chart_status_202
               args: >
                 'a68cc6dd-1bc1-40ca-aaf8-b5155785f0b4'
