--- a/models/deploy/marketplace/strangelove/strangelove__.yml
+++ b/models/deploy/marketplace/strangelove/strangelove__.yml
@@ -4,7 +4,7 @@ models:
     columns:
       - name: get
         tests:
-          - test_marketplace_udf:
+          - test_udf:
               name: test_strangelove__get_status_200
               args: >
                 'https://api.strange.love/cosmoshub/mainnet/rpc/block_by_hash'
